# persona

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  timeline.md
.streamlit/: config.toml
Links/: Links.txt
Outputs/Databases/: database.sql
Outputs/Generated_Profile_Data/: Example_Profile_Data.html
Tests/: Inferencer_Test.ipynb
backend/: Inferencer.py  inferencer.py  profiler.py
evals/: data.csv  inferencer-results.txt  inferencer.ipynb
outputs/: database.sql  messages.json
outputs/chroma/: chroma.sqlite3
web_app/: Summarizer.py  chat_functions.py  functions.py  generate_response.py  main.py
web_app/.streamlit/: bot_ui.py  config.toml
web_app/chat_history/temporary/: chat_log0.json  chat_log1.json
web_app/counsellor_site/: Main.py  main.py
web_app/counsellor_site/.streamlit/: config.toml
web_app/user_site/: Main.py  auth.py  chat.py  chat_functions.py  config.toml  is_suicidal.py  main.py  mysql_wrapper.py  prob_suicidal.py  sidebar.py
